--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -6,7 +6,8 @@
     --color_transparency_one:#7d9bab;
     --color_transparency_two:#506b7b;
     /* --color_transparency_three:#0b1011; */
-    --color_transparency_three:#01080E; 
+    /* --color_transparency_three:#01080E; */
+    --color_transparency_three:#051933;  
     --color_transparency_four:#232829;
     --color_transparency_five:#FFF;
     --color_transparency_six:#888;
