--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -114,10 +114,11 @@ body, html {
     flex-direction: column;
     gap: 30px;
     background-color: var(--color_transparency_three);
-    opacity: 0.6;
+    opacity: 0.9;
     margin: 2%;
     padding: 6%;
     border-radius: 10%;
+    border: 1px solid white;
 
 }
 
@@ -147,6 +148,7 @@ body, html {
     border: 1px solid var(--color_transparency_seven);
     opacity: 0.9;
     outline: none;
+    border: 2px solid black;
 
 }
 
