--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -29,33 +29,39 @@ body, html {
     font-family: var(--font_primary)
 }
 .header__img__list{
-    margin: 1% 0 0 0;
-    width: 2.5%;
+    margin: 1% 0 0 1%;
+    width: 4em;
     padding: 0;
+
 }
 .header__section{
     margin: 0;
     padding: 0;
-    display: flex;
+    display:flex;
     justify-content: center;
+    align-items:center;
+
 }
+
 .header__title{
+    margin: 0;
     font-size: 3.5em;
     color: var(--color_transparency_five);
+    width: 95%;
+    text-align: center;
 }
 
 .header__modal__links{
     display: none;
     flex-direction: column;
     background-color: var(--color_transparency_three);
-    width: 20%;
     padding-bottom: 100%;
-    border-radius: 20px;
+    border-radius: 0 50px 50px 0;
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    width: 20%; /* Full width */
+    width: 20em; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
 
@@ -70,10 +76,13 @@ body, html {
     font-weight: 400;
 }
 .sign__out{
-    margin-top: 80%;
+    margin-top: 10em;
 }
 .section__modal__link:hover{
     background-color: var(--color_transparency_four);
+}
+.homepage{
+    margin-top: 5em;
 }
 
 .homepage::before {
