--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@600&family=Montserrat:wght@600&display=swap');
+@import url('execution.css');
+
 :root{
     --image_background_login:url('../assets/login_page.png');
     --image_background_pages:url('../assets/background_pages.png');
-    --font_primary: 'Montserrat',sans-serif;
+    --font_primary: 'Chakra Petch',sans-serif;
     --color_transparency_one:#7d9bab;
     --color_transparency_two:#506b7b;
     /* --color_transparency_three:#0b1011; */
@@ -34,6 +36,12 @@ body, html {
     padding: 0;
 
 }
+.header__img__menu{
+    width: 1em;
+}
+.header_modal_link_container{
+    padding-right: 1em;
+}
 .header__section{
     margin: 0;
     padding: 0;
@@ -54,7 +62,8 @@ body, html {
 .header__modal__links{
     display: none;
     flex-direction: column;
-    background-color: var(--color_transparency_three);
+    background-color: var(--color_transparency_five);
+    padding-top: 5em;
     padding-bottom: 100%;
     border-radius: 0 50px 50px 0;
     position: fixed; /* Stay in place */
@@ -64,22 +73,23 @@ body, html {
     width: 20em; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
+    font-size: 1em;
 
 }
 
 .header__modal__link{
     text-decoration: none;
-    color: var(--color_transparency_eight);
+    color: var(--color_transparency_three);
     padding: 8%;
     margin-left: 1%;
-    font-size: 2rem;
-    font-weight: 400;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 .sign__out{
-    margin-top: 10em;
+    margin-top: 14em;
 }
-.section__modal__link:hover{
-    background-color: var(--color_transparency_four);
+.header__modal__link:hover{
+    background-color: var(--color_transparency_ten);
 }
 .homepage{
     margin-top: 5em;
@@ -167,56 +177,33 @@ body, html {
     background-color: var(--color_transparency_one);
 }
 
-/* Modal styles */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
+#loading{
+    display: none;
+    position: fixed;
+    z-index: 2; /* Sit on top */
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: var(--color_transparency_eleven); /* Black w/ opacity */
+    background-color: var(--color_transparency_three); /* Black w/ opacity */
+    opacity: 0.5;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
-
-.modal-content {
-    background-color: var(--color_transparency_three);
-    margin: 10% 25% 0% 25%; /* 15% from the top and centered */
-    padding: 5%;
-    border: 1px solid var(--color_transparency_six);
-    border-radius: 10px;
-    color: #FFF;
-
+.loader {
+    border: 5px solid #f3f3f3; /* Light grey */
+    border-top: 5px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 3em;
+    height: 3em;
+    animation: spin 2s linear infinite;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 10%;
 }
-
-.modal-content-buttons{
-    display: flex;
-    gap: 2%;
-    flex-wrap: wrap;
-}
-
-.modal-content-button{
-    padding: 3%;
-    border-radius: 15px;
-}
-
-/* The Close Button */
-.close {
-    color: var(--color_transparency_ten);
-    float: right;
-    font-size: 1.75rem;
-    font-weight: bold;
-    position: absolute;
-    top: 10px; /* Adjust as needed */
-    right: 10px; /* Adjust as needed */
-}
-
-.close:hover,
-.close:focus {
-    color: var(--color_transparency_twelve);
-    text-decoration: none;
-    cursor: pointer;
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 .rodape{
     position: fixed;
@@ -225,57 +212,4 @@ body, html {
     width: auto; /* Or specify a width if you want */
     color: var(--color_transparency_five); /* Example text color */
     padding: 10px; /* Example padding */
-}
-
-.execution_content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap:1%;
-    flex-wrap: wrap;
-}
-
-.execution__content__title{
-    font-size: 3.5rem;
-    font-weight: 600;
-    color: var(--color_transparency_five);
-    margin: 5%;
-}
-
-.execution_content_container{
-    display: flex;
-    gap: 30px;
-    background-color: var(--color_transparency_three);
-    opacity: 0.8;
-    margin: 2%;
-    padding: 6%;
-    border-radius: 10%;
-    flex: 0 0 auto;
-    border: 1px solid var(--color_transparency_six);
-    color: var(--color_transparency_five);
-    width: 100px; /* Fixed width */
-    height: 100px; /* Fixed height */
-    flex-wrap: wrap;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-}
-
-.execution_content_container:hover{
-    background-color: var(--color_transparency_one);
-}
-.execution_filter{
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-.execution_filter_input{
-    border-radius: 10px;
-    padding: 0.5em;
-    border: none;
-}
-.execution_filter_select{
-    border-radius: 10px;
-    padding: 0.5em;
-    
 }
