--- a/styles/execution.css
+++ b/styles/execution.css
@@ -149,6 +149,29 @@
     margin-top: 2em;
 
 }
+.execution-modal-content-bots-status-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.execution-refresh-details{
+    background-color: transparent;
+    color: transparent;
+    background-image: url('../assets/refrescar.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding: 0;
+    border: none;
+    border-radius: 0;
+    width: 1em;
+    cursor:pointer;
+    padding: 0.5em;
+    border-radius: 10px;
+}
+.execution-refresh-details:hover{
+    background-color: var(--color_transparency_six);
+}
+
 .execution-modal-content-bots-status-table{
     background-color:var(--color_transparency_five);
     height: 20em;
@@ -176,11 +199,12 @@ th,td{
     padding: 2px;
     height: 2em;
     border: 0.1px solid var(--color_transparency_three);
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    text-align: center;
+    text-align: start;
 
 }
+
 table{
     border-radius: 5px;
     width: 100%;
@@ -190,6 +214,8 @@ table{
 th{
     background-color: #ced8dd;
     width: 10em;
+    justify-content: center;
+    text-align: center;
 }
 
 tr{
