--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -180,6 +180,7 @@ body, html {
 #loading{
     display: none;
     position: fixed;
+    top: 0;
     z-index: 2; /* Sit on top */
     width: 100%; /* Full width */
     height: 100%; /* Full height */
