--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -206,7 +206,7 @@ body, html {
     100% { transform: rotate(360deg); }
 }
 .rodape{
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     width: auto; /* Or specify a width if you want */
