--- a/styles/header.css
+++ b/styles/header.css
@@ -47,6 +47,9 @@ header{
     display: flex;
     flex-direction: column;
     background-color: #2C313C;
+    background: linear-gradient(to right, #1B2735, #3A4B5C);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
     color: #C9D1D9;
     padding-top: 5em;
     padding-bottom: 100%;
