--- a/styles/login.css
+++ b/styles/login.css
@@ -1,8 +1,12 @@
-
+.login_page{
+    background: linear-gradient(to bottom, #051933, transparent);
+    background-attachment: fixed; /* Ensures the background is fixed during scrolling */
+    min-height: 100vh;
+}
 .login__content{
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     justify-content: center;
     text-align: center;
     gap:5%
@@ -38,9 +42,11 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     opacity: 0.7;
     padding: 15% 5% 15% 5%;
+    width: 20%;
     border: 1px solid white;
     position: fixed;
     top: 0;
+    border-radius: 15px;
 
 }
 
