--- a/styles/login.css
+++ b/styles/login.css
@@ -41,12 +41,13 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     opacity: 0.7;
-    padding: 15% 5% 15% 5%;
-    width: 20%;
+    padding: 5% 5% 5% 5%;
+    width: 20em;
     border: 1px solid white;
     position: fixed;
     top: 0;
     border-radius: 15px;
+    height: 100%;
 
 }
 
