--- a/styles/login.css
+++ b/styles/login.css
@@ -9,7 +9,6 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    gap:5%
 
 }
 
@@ -20,7 +19,6 @@
     opacity: 0.8;
     border-radius: 100px;
     padding: 2em;
-    margin-bottom: 5em;
 
 }
 
@@ -30,6 +28,10 @@
     color: #C9D1D9;
     margin: 2% 0 0 0;
     
+}
+.login__content__title p{
+    margin-top: 0.1em;
+    font-size: 0.5em;
 }
 
 .login__content__container{
@@ -41,13 +43,17 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     opacity: 0.7;
-    padding: 5% 5% 5% 5%;
+    padding: 3%;
     width: 20em;
     border: 1px solid white;
-    position: fixed;
-    top: 0;
+    /* position: fixed;
+    top: 0; */
     border-radius: 15px;
-    height: 100%;
+    height: 45em;
+    margin: 1em;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -57,6 +63,15 @@
     border: 1px solid var(--color_transparency_seven);
     opacity: 0.9;
     outline: none;
+    text-align: center;
     /* border: 2px solid black; */
 
+}
+.hover__button{
+    width: 10em;
+    font-weight: 600;
+}
+
+.hover__button:hover{
+    background-color: var(--color_transparency_one);
 }
