--- a/styles/configuration.css
+++ b/styles/configuration.css
@@ -212,8 +212,13 @@
     
     .configuration_add_new_bot_modal,
     .configuration_add_new_user_modal{
+        display: flex;
         margin-left: 1em;
         width: 80%;
         padding: 1em;
+    }
+    .config_bot_select{
+        min-width: 20em;
+        max-width: 20em;
     }
 }
