--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -11,6 +11,7 @@
 }
 .dashboard_filter_form{
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     padding: 1em;
     gap: 1em;
@@ -56,6 +57,28 @@
 
 }
 
+.dashboard-card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15%;
+    text-align: center;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    margin: 1em 0;
+}
+
+.card-title {
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 1em;
+}
+
+.card-value {
+    font-size: 2em;
+    font-weight: bold;
+    color: #1B2735;
+}
+
 @media(max-width:1820px){
     .dashboard-container{
         position: absolute;
@@ -70,5 +93,12 @@
         width: 100% ;
         height:100% ;
         aspect-ratio: auto 20 / 10;
+    }
+    .dashboard_filter_select{
+        max-width: 16em;
+    }
+    .card-title {
+        font-size: 1em;
+
     }
 }
