--- a/styles/configuration.css
+++ b/styles/configuration.css
@@ -144,7 +144,7 @@
     margin-top: 4em;
     margin-left: 2em;
     width: 80em;
-    height: 30em;
+    height: 40em;
     background-color: #ddd;
     color: #6c757d;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -163,7 +163,10 @@
     padding: 0.8em;
     border:none
 }
+
 .configuration_add_new_user_submit{
+    margin-top: 1em;
+    width: 10em;
     cursor: pointer;
 }
 
